align fixing

--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,7 @@ h1{
 }
 
 .grid-img{
-  width: auto;
+  width: 100%;
 }
 
 .w80{
